--- a/templates/pages/tiles-templates.mustache
+++ b/templates/pages/tiles-templates.mustache
@@ -1,12 +1,10 @@
 <!-- Header
 ================================================== -->
-<header id="nav-bar" class="container">
-   <div class="row">
-      <div class="span1 align-right">
-         <a id="backbutton" class="win-backbutton" href="./index.html"></a>
-      </div>
+<header id="nav-bar" class="container-fluid">
+   <div class="row-fluid">
       <div class="span8">
          <div id="header-container">
+            <a id="backbutton" class="win-backbutton" href="./index.html"></a>
             <h5>Application Name</h5>
             <div class="dropdown">
                <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
@@ -17,21 +15,14 @@
             </div>
          </div>
       </div>
-      <div class="span3">
-         {{>loggeduser}}
-      </div>
+      {{>loggeduser}}
    </div>
 </header>
 
-
-<div class="container metro">
-   <div class="row">
-      <div class="span1">&nbsp;</div>
-      <div class="span10">
-
-         <div  class="metro metro-theme-light">
-
-            <div class="metro-sections">
+<div class="container-fluid">
+   <div class="row-fluid">
+      <div class="metro span12">
+         <div class="metro-sections">
 
                <div class="metro-section" id="section1">
 
@@ -52,10 +43,8 @@
                   </a>
 
                </div>
-            </div>
 
          </div>
       </div>
-      <div class="span1">&nbsp;</div>
    </div>
 </div>
