--- a/templates/partials/logged-user.mustache
+++ b/templates/partials/logged-user.mustache
@@ -1,4 +1,4 @@
-<a id="user-info" href="#">
+<a id="user-info" class="pull-right" href="#">
    <div class="user-info-block">
       <h3>FirstName</h3>
       <h4>LastName</h4>
