--- a/templates/pages/appbar-demo.mustache
+++ b/templates/pages/appbar-demo.mustache
@@ -1,12 +1,10 @@
 <!-- Header
 ================================================== -->
-<header id="nav-bar" class="container">
-   <div class="row">
-      <div class="span1 align-right">
-         <a id="backbutton" class="win-backbutton" href="./index.html"></a>
-      </div>
+<header id="nav-bar" class="container-fluid">
+   <div class="row-fluid">
       <div class="span8">
          <div id="header-container">
+            <a id="backbutton" class="win-backbutton" href="./index.html"></a>
             <h5>Application Name</h5>
             <div class="dropdown">
                <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
@@ -17,9 +15,7 @@
             </div>
          </div>
       </div>
-      <div class="span3">
-         {{>loggeduser}}
-      </div>
+      {{>loggeduser}}
    </div>
 </header>
 
